# Rookie

./: .gitignore  README.md  Rookie.cabal  local-build.sh  stack.yaml
.github/workflows/: ci.yml
Client/: Client.cabal  Draw.hs  Main.hs  Paths.hs  Settings.hs
Engine/: BitBoard.hs  BoardState.hs  Engine.cabal  Moves.hs
Server/: Server.cabal
client/: client.cabal
client/Client/: Convert.hs  Draw.hs  GameInfo.hs  Main.hs  Paths.hs  Settings.hs
common/: common.cabal
common/Common/: Types.hs
engine/: engine.cabal
engine/Engine/: BitBoard.hs  BoardState.hs  Eval.hs  Moves.hs  Search.hs
interfaces/: interfaces.cabal
interfaces/Interfaces/: LegalMoves.hs  Notation.hs  Play.hs
server/: server.cabal  stack.yaml
server/Server/: Main.hs
