name:                Engine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Rookie#readme
license:             BSD3
author:              Piotr Wojtczak, Wiktor Czyz
maintainer:          example@example.com
copyright:           2021 Piotr Wojtczak & Wiktor Czyz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      BitBoard
      BoardState
  default-language:
      Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , array
