name:                client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Rookie#readme
license:             BSD3
author:              Piotr Wojtczak, Wiktor Czyz
maintainer:          example@example.com
copyright:           2021 Piotr Wojtczak & Wiktor Czyz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable rookie-client
  main-is:
      Client/Main.hs
  default-language:
      Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , threepenny-gui
    , common
    , filepath
    , containers
    , tuple
    , array
    , interfaces
  other-modules:
      Client.Draw
    , Client.Settings
    , Client.Convert
    , Client.GameInfo
